--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -29,22 +29,27 @@
     "inc_phq": "包含总部 (PHQ)",
     "station_costs": "空间站建设成本",
     "build_res_required": "所需建设资源",
-    "module_breakdown": "各模块资源明细",
+    "module_breakdown": "各模块消耗明细",
     "no_materials": "标准模块 - 无需额外材料",
-    "total_build_cost": "总建设成本",
-    "build_res_price": "建设资源价格"
+    "total_build_cost": "总计建设成本",
+    "build_res_price": "建设资源价格",
+    "station_planner": "空间站规划器",
+    "module_list": "模块列表",
+    "search_placeholder": "搜索模块 ID 或名称...",
+    "add_hint": "添加到规划列表",
+    "sun_light": "日照"
   },
   "profit": {
     "title": "经济分析",
-    "unit": "信用点 / 小时",
-    "miners_enabled": "矿工提供基础资源",
-    "internal_supply": "由其他空间站提供资源",
-    "res_price": "资源买入价格",
-    "prod_price": "产品卖出价格",
+    "unit": "信用币 / 小时",
+    "miners_enabled": "矿船提供基础资源",
+    "internal_supply": "资源由其他空间站提供",
+    "res_price": "原材料价格",
+    "prod_price": "产品价格",
     "average": "平均",
-    "expenses": "运行支出",
+    "expenses": "运营支出",
     "production": "总产值",
-    "footer": "预估每小时利润"
+    "footer": "预计每小时利润"
   },
   "race": {
     "argon": "Argon",
