update processor, make module item dragable

--- a/src/assets/game_data/Timelines (7.10)/locales/es.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/es.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Cuartel General",
   "{20104,10001}": "Producción de Compuestos Avanzados",
   "{20104,100101}": "Extensión del Anillo Hábitat",
   "{20104,100201}": "Columna del Anillo Habitat",
