--- a/src/assets/game_data/Timelines (7.10)/locales/it.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/it.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Quartier Generale",
   "{20104,10001}": "Produzione di Compositi Avanzati",
   "{20104,100101}": "Estensione dell'Anello dell'Habitat",
   "{20104,100201}": "Colonna dell'Anello dell'Habitat",
