--- a/src/assets/game_data/Timelines (7.10)/locales/pl.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/pl.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Kwatera główna",
   "{20104,10001}": "Produkcja kompozytów zaawan.",
   "{20104,100101}": "Rozszerzenie pierścienia mieszkalnego",
   "{20104,100201}": "Słupek pierścienia mieszkalnego",
