--- a/src/assets/game_data/Timelines (7.10)/locales/pt-BR.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/pt-BR.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Quartel General",
   "{20104,10001}": "Prod. de Composto Avançado",
   "{20104,100101}": "Extensão do Anel de Habitat",
   "{20104,100201}": "Coluna do Anel de Habitat",
