--- a/src/assets/game_data/Timelines (7.10)/locales/ru.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Штаб-квартира",
   "{20104,10001}": "Производство суперкомпозитов",
   "{20104,100101}": "Кольцо расширения Ареал",
   "{20104,100201}": "Опора кольца Ареал",
