--- a/src/assets/game_data/Timelines (7.10)/locales/de.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/de.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Hauptquartier",
   "{20104,10001}": "Verbundwerkstoffproduktion",
   "{20104,100101}": "Habitat-Ringerweiterung",
   "{20104,100201}": "Habitat-Ringsäule",
