--- a/src/assets/game_data/Timelines (7.10)/locales/en.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/en.json
@@ -1,5 +1,6 @@
 {
   "(TEMP)nividiumgems": "nividiumgems",
+  "{20102,2011}": "Headquarters",
   "{20104,10001}": "Advanced Composite Production",
   "{20104,100101}": "Habitat Ring Extension",
   "{20104,100201}": "Habitat Ring Column",
