add save and load method

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,7 +37,33 @@
     "module_list": "Station Modules",
     "search_placeholder": "Search (Name / ID / Pinyin)...",
     "add_hint": "Add to planning list",
-    "sun_light": "SUN LIGHT"
+    "sun_light": "SUN LIGHT",
+    "new": "New",
+    "save": "Save",
+    "save_as": "Save As",
+    "load": "Load",
+    "share": "Share",
+    "import": "Import",
+    "load_demo_data": "Load Demo Data",
+    "dialog_title_save_as": "Save Layout As",
+    "dialog_title_save_new_plan": "Save New Layout?",
+    "dialog_title_save_changes": "Save Changes?",
+    "dialog_msg_save_changes_to": "Do you want to save changes to '{name}' before creating a new plan?",
+    "dialog_msg_unsaved_new_plan": "Your current layout is not saved. Creating a new plan will discard all changes.",
+    "label_layout_name": "Layout Name",
+    "placeholder_enter_name": "Enter name for layout...",
+    "btn_cancel": "Cancel",
+    "btn_discard_and_new": "Discard & New",
+    "btn_save_as_copy": "Save as Copy...",
+    "btn_save_new_and_create": "Save & Create New",
+    "btn_overwrite_and_create": "Overwrite & Create New",
+    "btn_save": "Save",
+    "copy_suffix": " (Copy)",
+    "load_layout": "Load",
+    "action_load": "Load Layout",
+    "action_merge": "Merge Modules",
+    "action_delete": "Delete",
+    "confirm_delete_layout": "Are you sure you want to delete this layout?"
   },
   "profit": {
     "title": "ECONOMIC ANALYSIS",
