--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -37,7 +37,33 @@
     "module_list": "模块列表",
     "search_placeholder": "搜索模块 ID 或名称...",
     "add_hint": "添加到规划列表",
-    "sun_light": "日照"
+    "sun_light": "日照",
+    "new": "新建",
+    "save": "保存",
+    "save_as": "另存为",
+    "load": "加载",
+    "share": "分享",
+    "import": "导入",
+    "load_demo_data": "加载演示数据",
+    "load_layout": "加载",
+    "action_load": "加载布局",
+    "action_merge": "合并模块",
+    "action_delete": "删除",
+    "confirm_delete_layout": "确定要删除这个布局吗？",
+    "dialog_title_save_as": "另存方案",
+    "dialog_title_save_new_plan": "保存新方案",
+    "dialog_title_save_changes": "保存更改",
+    "dialog_msg_save_changes_to": "是否在创建新方案前，保存对 “{name}” 的更改？",
+    "dialog_msg_unsaved_new_plan": "当前布局尚未保存，新建方案将丢弃所有未保存的更改。",
+    "label_layout_name": "方案名称",
+    "placeholder_enter_name": "请输入名称...",
+    "btn_save_as_copy": "另存为副本",
+    "btn_discard_and_new": "丢弃并新建",
+    "btn_save_new_and_create": "保存并新建",
+    "btn_overwrite_and_create": "覆盖并新建",
+    "btn_save": "保存",
+    "copy_suffix": "(副本)",
+    "default_station_name": "我的空间站"
   },
   "profit": {
     "title": "经济分析",
