add import module

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,8 +48,8 @@
     "dialog_title_save_as": "Save Layout As",
     "dialog_title_save_new_plan": "Save New Layout?",
     "dialog_title_save_changes": "Save Changes?",
-    "dialog_msg_save_changes_to": "Do you want to save changes to '{name}' before creating a new plan?",
-    "dialog_msg_unsaved_new_plan": "Your current layout is not saved. Creating a new plan will discard all changes.",
+    "dialog_msg_save_changes_to": "Do you want to save changes to\n{name}\n before creating a new plan?",
+    "dialog_msg_unsaved_new_plan": "Your current layout is not saved.\n Creating a new plan will discard all changes.",
     "label_layout_name": "Layout Name",
     "placeholder_enter_name": "Enter name for layout...",
     "btn_cancel": "Cancel",
