--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -53,8 +53,8 @@
     "dialog_title_save_as": "另存方案",
     "dialog_title_save_new_plan": "保存新方案",
     "dialog_title_save_changes": "保存更改",
-    "dialog_msg_save_changes_to": "是否在创建新方案前，保存对 “{name}” 的更改？",
-    "dialog_msg_unsaved_new_plan": "当前布局尚未保存，新建方案将丢弃所有未保存的更改。",
+    "dialog_msg_save_changes_to": "是否在创建新方案前保存对\n{name} 的更改？",
+    "dialog_msg_unsaved_new_plan": "当前布局尚未保存\n新建方案将丢弃所有未保存的更改。",
     "label_layout_name": "方案名称",
     "placeholder_enter_name": "请输入名称...",
     "btn_save_as_copy": "另存为副本",
